examples/errors/Broken.flx
module Broken {
  fun value() { 1; }
}
